--- a/release-notes/4.7.27.md
+++ b/release-notes/4.7.27.md
@@ -1,6 +1,6 @@
 # CiviCRM 4.7.27
 
-Released November 8, 2017
+Released November 1, 2017
 
 - **[Synopsis](#synopsis)**
 - **[Features](#features)**
@@ -81,6 +81,13 @@ Released November 8, 2017
   Report developers can now set a variable class name for linked fields in
   reports.
 
+- **[CRM-21109](https://issues.civicrm.org/jira/browse/CRM-21109) Creating
+  contacts is slow, part 2 of 2: Smart group caching
+  ([10943](https://github.com/civicrm/civicrm-core/pull/10943))**
+
+  CSV imports through the command line now clear the smart group cache once per
+  import rather than once per line.
+
 ### CiviCampaign
 
 - **[CRM-21063](https://issues.civicrm.org/jira/browse/CRM-21063) Survey detail
@@ -109,6 +116,21 @@ Released November 8, 2017
   Search forms.  The layout of the case search fields is also modified.
 
 ### CiviContribute
+
+- **[CRM-21189](https://issues.civicrm.org/jira/browse/CRM-21189) Add permission
+  for Close and reopen Batch
+  ([10983](https://github.com/civicrm/civicrm-core/pull/10983))**
+
+  Four new permissions are added to control access to accounting batches:
+
+  - close own manual batches
+  - close all manual batches
+  - reopen own manual batches
+  - reopen own manual batches
+
+  Administrators should consider whether to grant these permissions to users who
+  have the "edit all manual batches" or "edit own manual batches" permissions,
+  which handled access to close and reopen batches.
 
 - **[CRM-12167](https://issues.civicrm.org/jira/browse/CRM-12167) Add support
   for admin-only fee / price field value options
@@ -185,100 +207,80 @@ Released November 8, 2017
   resolved)**
 
   The Manage Groups page now will display "Unknown" for the count of smart group
-  members where the smart group cache is empty.  You can click the button to
-  regenerate the smart group cache if you want to see the up-to-date counts.
+  members where the smart group cache is out of date.  You can click the button
+  to regenerate the smart group cache if you want to see the up-to-date counts.
 
-- **[CRM-20636](https://issues.civicrm.org/jira/browse/CRM-20636) Notice fix while updating membership without payment  ([10412](https://github.com/civicrm/civicrm-core/pull/10412))**
+- **[CRM-21247](https://issues.civicrm.org/jira/browse/CRM-21247) User Record
+  link (in the Actions section of a contact record summary) is broken
+  ([11057](https://github.com/civicrm/civicrm-core/pull/11057))**
 
-- **[CRM-18367](https://issues.civicrm.org/jira/browse/CRM-18367) Fatal error on Contribution logging summary report (possibly remove - see comment) ([10987](https://github.com/civicrm/civicrm-core/pull/10987))**
+  This removes an extraneous `cid=` appended to the user record link.
 
-- **[CRM-21247](https://issues.civicrm.org/jira/browse/CRM-21247) User Record link (in the Actions section of a contact record summary) is broken ([11057](https://github.com/civicrm/civicrm-core/pull/11057))**
+- **[CRM-21241](https://issues.civicrm.org/jira/browse/CRM-21241) Spinning logo
+  is too jumpy ([11046](https://github.com/civicrm/civicrm-core/pull/11046))**
 
-- **[CRM-21241](https://issues.civicrm.org/jira/browse/CRM-21241) Spinning logo is too jumpy ([11046](https://github.com/civicrm/civicrm-core/pull/11046))**
+  The CiviCRM logo in the navigation menu has been modified so that it is
+  centered on its axis of rotation and spins smoothly.  The spinning logo that
+  appears while pop-up windows load now is the actual CiviCRM logo and spins
+  more slowly and smoothly.
 
-- **[CRM-21238](https://issues.civicrm.org/jira/browse/CRM-21238) Fatal error on Drupal /user and /user/% ([11049](https://github.com/civicrm/civicrm-core/pull/11049))**
+- **[CRM-21110](https://issues.civicrm.org/jira/browse/CRM-21110) Relationships
+  tab on contact summary runs query twice
+  ([11009](https://github.com/civicrm/civicrm-core/pull/11009)) (improvement on
+  previous resolution)**
 
-- **[CRM-21110](https://issues.civicrm.org/jira/browse/CRM-21110) Relationships tab on contact summary runs query twice ([11009](https://github.com/civicrm/civicrm-core/pull/11009))**
+  This further simplifies the query to get a contact's total number of
+  relationships.
 
-- **[CRM-15861](https://issues.civicrm.org/jira/browse/CRM-15861) Offline membership renewal doesn't display priceset choices ([10887](https://github.com/civicrm/civicrm-core/pull/10887))**
+- **[CRM-21223](https://issues.civicrm.org/jira/browse/CRM-21223) Number and
+  Money fields are not set to NULL in the database
+  ([11037](https://github.com/civicrm/civicrm-core/pull/11037)) (preliminary
+  work)**
 
-- **[CRM-21223](https://issues.civicrm.org/jira/browse/CRM-21223) Number and Money fields are not set to NULL in the database ([11037](https://github.com/civicrm/civicrm-core/pull/11037))**
+  This adds tests to diagnose the handling of null default values for certain
+  fields in the database.
 
-- **[CRM-21227](https://issues.civicrm.org/jira/browse/CRM-21227) Fix issues in CRM_Core_Page_run test suite following merge of PR #10435 ([11032](https://github.com/civicrm/civicrm-core/pull/11032))**
+- **[CRM-21227](https://issues.civicrm.org/jira/browse/CRM-21227) Fix issues in
+  CRM_Core_Page_run test suite following merge of PR #10435
+  ([11032](https://github.com/civicrm/civicrm-core/pull/11032))**
 
-- **[CRM-21202](https://issues.civicrm.org/jira/browse/CRM-21202) DataTables warning: table id=dupePairs ([11004](https://github.com/civicrm/civicrm-core/pull/11004))**
+  This fixes some places where PHP notices would appear because keys had been
+  presumed to be set in certain arrays of default values.
 
-- **[CRM-21198](https://issues.civicrm.org/jira/browse/CRM-21198) Completing payment for partially paid membership doesn't change membership status ([11006](https://github.com/civicrm/civicrm-core/pull/11006))**
+- **[CRM-21202](https://issues.civicrm.org/jira/browse/CRM-21202) DataTables
+  warning: table id=dupePairs
+  ([11004](https://github.com/civicrm/civicrm-core/pull/11004))**
 
-- **[CRM-20653](https://issues.civicrm.org/jira/browse/CRM-20653) CRM_Utils_Request::retrieve() does not support non-truthy defaults ([10435](https://github.com/civicrm/civicrm-core/pull/10435))**
+  This prevents a warning that would pop up after batch merge of duplicates has
+  run.
 
-- **[CRM-20226](https://issues.civicrm.org/jira/browse/CRM-20226) Parent Group do not inherit child group contacts ([11011](https://github.com/civicrm/civicrm-core/pull/11011))**
+- **[CRM-16836](https://issues.civicrm.org/jira/browse/CRM-16836) Basic Search
+  form group select does not respect ACLs
+  ([11013](https://github.com/civicrm/civicrm-core/pull/11013))**
 
-- **[CRM-20999](https://issues.civicrm.org/jira/browse/CRM-20999) Multiple elements share same id `auto_renew` value on live contribution page. ([10834](https://github.com/civicrm/civicrm-core/pull/10834))**
+- **[CRM-21178](https://issues.civicrm.org/jira/browse/CRM-21178) Custom fields
+  of type "Link" are no longer clickable
+  ([10985](https://github.com/civicrm/civicrm-core/pull/10985))**
 
-- **[CRM-16836](https://issues.civicrm.org/jira/browse/CRM-16836) Basic Search form group select does not respect ACLs ([11013](https://github.com/civicrm/civicrm-core/pull/11013))**
+- **[CRM-21169](https://issues.civicrm.org/jira/browse/CRM-21169) Fix broken
+  inline edit for profiles
+  ([10964](https://github.com/civicrm/civicrm-core/pull/10964))**
 
-- **[CRM-21189](https://issues.civicrm.org/jira/browse/CRM-21189) Add permission for Close and reopen Batch ([10983](https://github.com/civicrm/civicrm-core/pull/10983))**
+  A Javascript error due to a function removed from jQuery UI caused the whole
+  inline profile edit interface to break.
 
-- **[CRM-21134](https://issues.civicrm.org/jira/browse/CRM-21134) e-notice errors when using a processor extension ([10935](https://github.com/civicrm/civicrm-core/pull/10935))**
+- **[CRM-21172](https://issues.civicrm.org/jira/browse/CRM-21172) Fix 'Edit
+  Contact Information' link on contact dashboard
+  ([10969](https://github.com/civicrm/civicrm-core/pull/10969))**
 
-- **[CRM-21117](https://issues.civicrm.org/jira/browse/CRM-21117) Line item not shown in mails when paying later for membership priceset ([10978](https://github.com/civicrm/civicrm-core/pull/10978))**
+  A fatal exception would occur when clicking "Edit Contact Information" on a
+  related contact in the user dashboard.
 
-- **[CRM-21183](https://issues.civicrm.org/jira/browse/CRM-21183) Updating Partially paid contribution to Completed doesn't update membership ([10981](https://github.com/civicrm/civicrm-core/pull/10981))**
+### CiviGrant
 
-- **[CRM-21178](https://issues.civicrm.org/jira/browse/CRM-21178) Custom fields of type "Link" are no longer clickable ([10985](https://github.com/civicrm/civicrm-core/pull/10985))**
-
-- **[CRM-21169](https://issues.civicrm.org/jira/browse/CRM-21169) Fix broken inline edit for profiles ([10964](https://github.com/civicrm/civicrm-core/pull/10964))**
-
-- **[CRM-20657](https://issues.civicrm.org/jira/browse/CRM-20657) Multiple events purchased from webform lists only single participant details in mail received ([10439](https://github.com/civicrm/civicrm-core/pull/10439))**
-
-- **Fixing type (missing function call) in example for hook_civicrm_alterAngular ([10952](https://github.com/civicrm/civicrm-core/pull/10952))**
-
-- **[NFC] comments clean up in test classes. ([10963](https://github.com/civicrm/civicrm-core/pull/10963))**
-
-- **[CRM-21172](https://issues.civicrm.org/jira/browse/CRM-21172) Fix 'Edit Contact Information' link on contact dashboard ([10969](https://github.com/civicrm/civicrm-core/pull/10969))**
-
-- **[CRM-20892](https://issues.civicrm.org/jira/browse/CRM-20892) Same mailing open in two windows can overwrite data on scheduled mailings ([10953](https://github.com/civicrm/civicrm-core/pull/10953))**
-
-- **templates/CRM/PCP/Form/Campaign.tpl: remove comment (not relevant). ([10959](https://github.com/civicrm/civicrm-core/pull/10959))**
-
-- **Correct spelling. ([10955](https://github.com/civicrm/civicrm-core/pull/10955))**
-
-- **Civilint civicrm_og_sync module ([489](https://github.com/civicrm/civicrm-drupal/pull/489))**
-
-- **Civilint civicrm_user.inc ([490](https://github.com/civicrm/civicrm-drupal/pull/490))**
-
-- **Lint CiviCRM Rules module ([477](https://github.com/civicrm/civicrm-drupal/pull/477))**
-
-- **Remove CiviTest.module.sample as been replaced with the CiviCRM Dev Docs ([492](https://github.com/civicrm/civicrm-drupal/pull/492))**
-
-- **NFC Civilint civicrm_group_roles module ([479](https://github.com/civicrm/civicrm-drupal/pull/479))**
-
-- **Run Civilint against first half of civicrm_handler_field files ([485](https://github.com/civicrm/civicrm-drupal/pull/485))**
-
-- **Civilint views plugins files ([483](https://github.com/civicrm/civicrm-drupal/pull/483))**
-
-- **Lint Civitheme module ([475](https://github.com/civicrm/civicrm-drupal/pull/475))**
-
-- **Civilint civicrm_handler_field_website.inc ([484](https://github.com/civicrm/civicrm-drupal/pull/484))**
-
-- **(NFC) Lint civicrm.config.php.drupal ([474](https://github.com/civicrm/civicrm-drupal/pull/474))**
-
-- **Civilint Some views files and HookTest file ([476](https://github.com/civicrm/civicrm-drupal/pull/476))**
-
-- **NFC Civilint civicrm_member_roles ([480](https://github.com/civicrm/civicrm-drupal/pull/480))**
-
-- **NFC Civilint civicrm_contact_ref module ([481](https://github.com/civicrm/civicrm-drupal/pull/481))**
-
-- **CiviCRM / Drupal Rules: Show all groups ([478](https://github.com/civicrm/civicrm-drupal/pull/478))**
-
-### CiviGrant, CiviReport
-
-- **[CRM-20460](https://issues.civicrm.org/jira/browse/CRM-20460) Grant Report incorrect where clause  ([11036](https://github.com/civicrm/civicrm-core/pull/11036))**
-
-### CiviCRM API, Core CiviCRM, Import
-
-- **[CRM-21109](https://issues.civicrm.org/jira/browse/CRM-21109) Creating contacts is slow, part 2 of 2: Smart group caching ([10943](https://github.com/civicrm/civicrm-core/pull/10943))**
+- **[CRM-20460](https://issues.civicrm.org/jira/browse/CRM-20460) Grant Report
+  incorrect where clause
+  ([11036](https://github.com/civicrm/civicrm-core/pull/11036))**
 
 ### Backdrop Integration
 
@@ -334,11 +336,55 @@ Released November 8, 2017
   selected.  However, a bug would display credit card and billing address fields
   incorrectly.  This change resolves this bug.
 
+- **[CRM-18367](https://issues.civicrm.org/jira/browse/CRM-18367) Fatal error on
+  Contribution logging summary report (possibly remove - see comment)
+  ([10987](https://github.com/civicrm/civicrm-core/pull/10987))**
+
+  The Contribute Logging Report--both summary and detail--have been removed
+  because they have not worked properly for years.
+
+- **[CRM-20999](https://issues.civicrm.org/jira/browse/CRM-20999) Multiple
+  elements share same id `auto_renew` value on live contribution page.
+  ([10834](https://github.com/civicrm/civicrm-core/pull/10834))**
+
+- **[CRM-21134](https://issues.civicrm.org/jira/browse/CRM-21134) e-notice
+  errors when using a processor extension
+  ([10935](https://github.com/civicrm/civicrm-core/pull/10935))**
+
+  In some circumstances, PHP notices for undefined indexes would appear due to
+  parameter names that were presumed to exist.
+
 - **[CRM-21221](https://issues.civicrm.org/jira/browse/CRM-21221) Precedence order logic bug in Contribution.completetransaction  ([11027](https://github.com/civicrm/civicrm-core/pull/11027))**
 
 - **[CRM-20750](https://issues.civicrm.org/jira/browse/CRM-20750) Incorrect financial trxn entries when payment instrument is changed on backoffice Contribution edit form  ([10980](https://github.com/civicrm/civicrm-core/pull/10980) and [10920](https://github.com/civicrm/civicrm-core/pull/10920))**
 
 ### CiviMember
+
+- **[CRM-20636](https://issues.civicrm.org/jira/browse/CRM-20636) Notice fix
+  while updating membership without payment
+  ([10412](https://github.com/civicrm/civicrm-core/pull/10412))**
+
+  This prevents a PHP notice from appearing when updating a membership with no
+  payments.
+
+- **[CRM-15861](https://issues.civicrm.org/jira/browse/CRM-15861) Offline
+  membership renewal doesn't display priceset choices
+  ([10887](https://github.com/civicrm/civicrm-core/pull/10887)) (preliminary
+  work)**
+
+  This consolidates some code for choosing the default membership type.
+
+- **[CRM-21198](https://issues.civicrm.org/jira/browse/CRM-21198) Completing
+  payment for partially paid membership doesn't change membership status
+  ([11006](https://github.com/civicrm/civicrm-core/pull/11006))**
+
+- **[CRM-21183](https://issues.civicrm.org/jira/browse/CRM-21183) Updating
+  Partially paid contribution to Completed doesn't update membership
+  ([10981](https://github.com/civicrm/civicrm-core/pull/10981))**
+
+- **[CRM-21117](https://issues.civicrm.org/jira/browse/CRM-21117) Line item not
+  shown in mails when paying later for membership priceset
+  ([10978](https://github.com/civicrm/civicrm-core/pull/10978))**
 
 - **[CRM-20881](https://issues.civicrm.org/jira/browse/CRM-20881) Backend Membership status set to pending if contribution status label 'Completed' is renamed ([10670](https://github.com/civicrm/civicrm-core/pull/10670))**
 
@@ -353,15 +399,38 @@ Released November 8, 2017
 
   A number of previously unhandled strings are now sent through translation.
 
+- **[CRM-20657](https://issues.civicrm.org/jira/browse/CRM-20657) Multiple
+  events purchased from webform lists only single participant details in mail
+  received ([10439](https://github.com/civicrm/civicrm-core/pull/10439))**
+
+  The Participant BAO didn't accurately handle event registrations with multiple
+  top-level participants.
+
 - **[CRM-21127](https://issues.civicrm.org/jira/browse/CRM-21127) Event API return request params format is partially outdated ([10984](https://github.com/civicrm/civicrm-core/pull/10984))**
 
 - **[CRM-21133](https://issues.civicrm.org/jira/browse/CRM-21133) Price set error with NULL financial types  ([10947](https://github.com/civicrm/civicrm-core/pull/10947))**
+
+### CiviMail
+
+- **[CRM-20892](https://issues.civicrm.org/jira/browse/CRM-20892) Same mailing
+  open in two windows can overwrite data on scheduled mailings
+  ([10953](https://github.com/civicrm/civicrm-core/pull/10953))**
+
+  A new `modified_date` prevents a CiviMail window from saving mailing data if
+  the mailing has been saved (in another tab or by another user) since the
+  window loaded the mailing information.
 
 ### Import
 
 - **[CRM-16964](https://issues.civicrm.org/jira/browse/CRM-16964) Importing contact custom data doesn't respect the Fill option ([10838](https://github.com/civicrm/civicrm-core/pull/10838))**
 
-### Drupal Integration Modules
+### Drupal Integration
+
+- **[CRM-21156](https://issues.civicrm.org/jira/browse/CRM-21156) CiviCRM Rules
+  does not show all available Groups
+  ([478](https://github.com/civicrm/civicrm-drupal/pull/478))**
+
+  The list of CiviCRM groups available in the Rules module was limited to 25.
 
 - **[CRM-20937](https://issues.civicrm.org/jira/browse/CRM-20937) civicrm engage breaks birth date field ([464](https://github.com/civicrm/civicrm-drupal/pull/464))**
 
@@ -379,6 +448,64 @@ Released November 8, 2017
   member_BAO_membershiptype_getMembershipTypesByOrg with API equivalent
   ([11029](https://github.com/civicrm/civicrm-core/pull/11029) and
   [11020](https://github.com/civicrm/civicrm-core/pull/11020))**
+
+- **[CRM-20226](https://issues.civicrm.org/jira/browse/CRM-20226) Parent Group
+  do not inherit child group contacts
+  ([11011](https://github.com/civicrm/civicrm-core/pull/11011)) (follow-up
+  work)**
+
+  Comments were added to the code.
+
+- **Fixing type (missing function call) in example for hook_civicrm_alterAngular
+  ([10952](https://github.com/civicrm/civicrm-core/pull/10952))**
+
+- **[NFC] comments clean up in test classes.
+  ([10963](https://github.com/civicrm/civicrm-core/pull/10963))**
+
+- **templates/CRM/PCP/Form/Campaign.tpl: remove comment (not relevant).
+  ([10959](https://github.com/civicrm/civicrm-core/pull/10959))**
+
+- **Correct spelling.
+  ([10955](https://github.com/civicrm/civicrm-core/pull/10955))**
+
+- **Civilint civicrm_og_sync module
+  ([489](https://github.com/civicrm/civicrm-drupal/pull/489))**
+
+- **Civilint civicrm_user.inc
+  ([490](https://github.com/civicrm/civicrm-drupal/pull/490))**
+
+- **Lint CiviCRM Rules module
+  ([477](https://github.com/civicrm/civicrm-drupal/pull/477))**
+
+- **Remove CiviTest.module.sample as been replaced with the CiviCRM Dev Docs
+  ([492](https://github.com/civicrm/civicrm-drupal/pull/492))**
+
+- **NFC Civilint civicrm_group_roles module
+  ([479](https://github.com/civicrm/civicrm-drupal/pull/479))**
+
+- **Run Civilint against first half of civicrm_handler_field files
+  ([485](https://github.com/civicrm/civicrm-drupal/pull/485))**
+
+- **Civilint views plugins files
+  ([483](https://github.com/civicrm/civicrm-drupal/pull/483))**
+
+- **Lint Civitheme module
+  ([475](https://github.com/civicrm/civicrm-drupal/pull/475))**
+
+- **Civilint civicrm_handler_field_website.inc
+  ([484](https://github.com/civicrm/civicrm-drupal/pull/484))**
+
+- **(NFC) Lint civicrm.config.php.drupal
+  ([474](https://github.com/civicrm/civicrm-drupal/pull/474))**
+
+- **Civilint Some views files and HookTest file
+  ([476](https://github.com/civicrm/civicrm-drupal/pull/476))**
+
+- **NFC Civilint civicrm_member_roles
+  ([480](https://github.com/civicrm/civicrm-drupal/pull/480))**
+
+- **NFC Civilint civicrm_contact_ref module
+  ([481](https://github.com/civicrm/civicrm-drupal/pull/481))**
 
 ## <a name="credits"></a>Credits
 
