--- a/release-notes/4.7.27.md
+++ b/release-notes/4.7.27.md
@@ -13,11 +13,11 @@ Released November 1, 2017
 
 | *Does this version...?*                                     |         |
 |:----------------------------------------------------------- |:-------:|
-| Fix security vulnerabilities?                               |         |
+| Fix security vulnerabilities?                               |   no    |
 | **Change the database schema?**                             | **yes** |
 | **Alter the API?**                                          | **yes** |
-| Require attention to configuration options?                 |         |
-| Fix problems installing or upgrading to a previous version? |         |
+| **Require attention to configuration options?**             | **yes** |
+| Fix problems installing or upgrading to a previous version? |   no    |
 | **Introduce features?**                                     | **yes** |
 | **Fix bugs?**                                               | **yes** |
 
@@ -180,6 +180,14 @@ Released November 1, 2017
   Custom fields about contacts can now be included as columns and filters on the
   Membership Detail report.
 
+### Backdrop Integration
+
+- **[CRM-21217](https://issues.civicrm.org/jira/browse/CRM-21217) Enable E2E
+  tests for Backdrop CMS
+  ([11021](https://github.com/civicrm/civicrm-core/pull/11021))**
+
+  End-to-end tests now include Backdrop.
+
 ### WordPress Integration
 
 - **[CRM-17633](https://issues.civicrm.org/jira/browse/CRM-17633) WordPress in
@@ -276,19 +284,22 @@ Released November 1, 2017
   A fatal exception would occur when clicking "Edit Contact Information" on a
   related contact in the user dashboard.
 
+- **[CRM-20217](https://issues.civicrm.org/jira/browse/CRM-20217) phone based
+  dedupe rule fails to match when importing
+  ([9925](https://github.com/civicrm/civicrm-core/pull/9925))**
+
+- **[CRM-16964](https://issues.civicrm.org/jira/browse/CRM-16964) Importing
+  contact custom data doesn't respect the Fill option
+  ([10838](https://github.com/civicrm/civicrm-core/pull/10838))**
+
+  Custom fields with values would be overwritten by imported values even when
+  the import is using the Fill mode for matched contacts.
+
 ### CiviGrant
 
 - **[CRM-20460](https://issues.civicrm.org/jira/browse/CRM-20460) Grant Report
   incorrect where clause
   ([11036](https://github.com/civicrm/civicrm-core/pull/11036))**
-
-### Backdrop Integration
-
-- **[CRM-21217](https://issues.civicrm.org/jira/browse/CRM-21217) Enable E2E tests for Backdrop CMS ([11021](https://github.com/civicrm/civicrm-core/pull/11021))**
-
-### Dedupe
-
-- **[CRM-20217](https://issues.civicrm.org/jira/browse/CRM-20217) phone based dedupe rule fails to match when importing ([9925](https://github.com/civicrm/civicrm-core/pull/9925))**
 
 ### CiviCase
 
@@ -354,9 +365,28 @@ Released November 1, 2017
   In some circumstances, PHP notices for undefined indexes would appear due to
   parameter names that were presumed to exist.
 
-- **[CRM-21221](https://issues.civicrm.org/jira/browse/CRM-21221) Precedence order logic bug in Contribution.completetransaction  ([11027](https://github.com/civicrm/civicrm-core/pull/11027))**
+- **[CRM-21221](https://issues.civicrm.org/jira/browse/CRM-21221) Precedence
+  order logic bug in Contribution.completetransaction
+  ([11027](https://github.com/civicrm/civicrm-core/pull/11027))**
 
-- **[CRM-20750](https://issues.civicrm.org/jira/browse/CRM-20750) Incorrect financial trxn entries when payment instrument is changed on backoffice Contribution edit form  ([10980](https://github.com/civicrm/civicrm-core/pull/10980) and [10920](https://github.com/civicrm/civicrm-core/pull/10920))**
+  This resolves a bug that was unlikely to cause real-life problems but could
+  theoretically cause false failures of the `Contribution.completetransaction`
+  API.
+
+- **[CRM-20750](https://issues.civicrm.org/jira/browse/CRM-20750) Incorrect
+  financial trxn entries when payment instrument is changed on backoffice
+  Contribution edit form
+  ([10980](https://github.com/civicrm/civicrm-core/pull/10980) and
+  [10920](https://github.com/civicrm/civicrm-core/pull/10920))**
+
+- **[CRM-21187](https://issues.civicrm.org/jira/browse/CRM-21187) Fix:
+  Completing an existing contribution using completetransaction does not respect
+  currency on financial_trxn record
+  ([10982](https://github.com/civicrm/civicrm-core/pull/10982))**
+
+  This resolves a bug where payments made against pending contributions would
+  arrive as the default currency rather than the currency specified by the
+  transaction.
 
 ### CiviMember
 
@@ -386,11 +416,9 @@ Released November 1, 2017
   shown in mails when paying later for membership priceset
   ([10978](https://github.com/civicrm/civicrm-core/pull/10978))**
 
-- **[CRM-20881](https://issues.civicrm.org/jira/browse/CRM-20881) Backend Membership status set to pending if contribution status label 'Completed' is renamed ([10670](https://github.com/civicrm/civicrm-core/pull/10670))**
-
-### Accounting Integration, CiviContribute
-
-- **[CRM-21187](https://issues.civicrm.org/jira/browse/CRM-21187) Fix: Completing an existing contribution using completetransaction does not respect currency on financial_trxn record ([10982](https://github.com/civicrm/civicrm-core/pull/10982))**
+- **[CRM-20881](https://issues.civicrm.org/jira/browse/CRM-20881) Backend
+  Membership status set to pending if contribution status label 'Completed' is
+  renamed ([10670](https://github.com/civicrm/civicrm-core/pull/10670))**
 
 ### CiviEvent
 
@@ -406,9 +434,19 @@ Released November 1, 2017
   The Participant BAO didn't accurately handle event registrations with multiple
   top-level participants.
 
-- **[CRM-21127](https://issues.civicrm.org/jira/browse/CRM-21127) Event API return request params format is partially outdated ([10984](https://github.com/civicrm/civicrm-core/pull/10984))**
+- **[CRM-21127](https://issues.civicrm.org/jira/browse/CRM-21127) Event API
+  return request params format is partially outdated
+  ([10984](https://github.com/civicrm/civicrm-core/pull/10984))**
 
-- **[CRM-21133](https://issues.civicrm.org/jira/browse/CRM-21133) Price set error with NULL financial types  ([10947](https://github.com/civicrm/civicrm-core/pull/10947))**
+  The Event API would expect an old format for specifying the fields to return.
+
+- **[CRM-21133](https://issues.civicrm.org/jira/browse/CRM-21133) Price set
+  error with NULL financial types
+  ([10947](https://github.com/civicrm/civicrm-core/pull/10947))**
+
+  This resolves a bug where the newly-created price set's financial type would
+  be set to `NULL` when converting an event's registration options to a price
+  set.  This would cause the price set to be missing when managing the event.
 
 ### CiviMail
 
@@ -420,10 +458,6 @@ Released November 1, 2017
   the mailing has been saved (in another tab or by another user) since the
   window loaded the mailing information.
 
-### Import
-
-- **[CRM-16964](https://issues.civicrm.org/jira/browse/CRM-16964) Importing contact custom data doesn't respect the Fill option ([10838](https://github.com/civicrm/civicrm-core/pull/10838))**
-
 ### Drupal Integration
 
 - **[CRM-21156](https://issues.civicrm.org/jira/browse/CRM-21156) CiviCRM Rules
@@ -432,7 +466,12 @@ Released November 1, 2017
 
   The list of CiviCRM groups available in the Rules module was limited to 25.
 
-- **[CRM-20937](https://issues.civicrm.org/jira/browse/CRM-20937) civicrm engage breaks birth date field ([464](https://github.com/civicrm/civicrm-drupal/pull/464))**
+- **[CRM-20937](https://issues.civicrm.org/jira/browse/CRM-20937) civicrm engage
+  breaks birth date field
+  ([464](https://github.com/civicrm/civicrm-drupal/pull/464))**
+
+  The CiviEngage module ships with template overrides, and outdated templates
+  broke the birth date field.
 
 ### WordPress Integration
 
@@ -440,7 +479,9 @@ Released November 1, 2017
   plugin wiki/support links are incorrect
   ([116](https://github.com/civicrm/civicrm-wordpress/pull/116))**
 
-- **[CRM-21166](https://issues.civicrm.org/jira/browse/CRM-21166) WP-CLI commands fail due to whitespace in regex ([115](https://github.com/civicrm/civicrm-wordpress/pull/115))**
+- **[CRM-21166](https://issues.civicrm.org/jira/browse/CRM-21166) WP-CLI
+  commands fail due to whitespace in regex
+  ([115](https://github.com/civicrm/civicrm-wordpress/pull/115))**
 
 ## <a name="misc"></a>Miscellany
 
@@ -511,15 +552,32 @@ Released November 1, 2017
 
 This release was developed by the following code authors:
 
-AGH Strategies - Alice Frumin, Andrew Hunt; Australian Greens - Seamus Lee; Blackfly Solutions - Alan Dixon; Chris Burgess; Circle Interactive - Dave Jenkins; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Sunil Pawar, Yashodha Chaku; CompuCorp - Camilo Rodriguez, Michael Devery, Omar Abu Hussein; Coop SymbioTIC - Mathieu Lutfy; Eli Lisseck; Francesc Bassas i Bullich; Fuzion - Jitendra Purohit; Ginkgo Street Labs - Frank Gómez; JMA Consulting - Monish Deb, Pradeep Nayak; Kacper Warda; Left Join Labs - Sean Madsen; Lighthouse Design and Consulting - Brian Shaughnessy; MJW Consulting - Matthew Wire; Pawel Nowak; Progressive Technology Project - Jamie McClelland; Skvare - Mark Hanna; Tadpole Collective - Kevin Cristiano; Third Sector Design - Michael McAndrew; Wikimedia Foundation - Eileen McNaughton
+AGH Strategies - Alice Frumin, Andrew Hunt; Australian Greens - Seamus Lee;
+Blackfly Solutions - Alan Dixon; Chris Burgess; Circle Interactive - Dave
+Jenkins; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Sunil Pawar, Yashodha
+Chaku; CompuCorp - Camilo Rodriguez, Kacper Warda, Michael Devery, Omar Abu
+Hussein; Coop SymbioTIC - Mathieu Lutfy; Eli Lisseck; Francesc Bassas i Bullich;
+Fuzion - Jitendra Purohit; Ginkgo Street Labs - Frank Gómez; JMA Consulting -
+Monish Deb, Pradeep Nayak; Left Join Labs - Sean Madsen; Lighthouse Design and
+Consulting - Brian Shaughnessy; MJW Consulting - Matthew Wire; Pawel Nowak;
+Progressive Technology Project - Jamie McClelland; Skvare - Mark Hanna; Tadpole
+Collective - Kevin Cristiano; Third Sector Design - Michael McAndrew; Wikimedia
+Foundation - Eileen McNaughton
 
 Most authors also reviewed code for this release; in addition, the following
 reviewers contributed their comments:
 
-adzil; AGH Strategies - Alice Frumin, Andrew Hunt; artfulrobot; Artful Robot - Rich Lott; Australian Greens - Seamus Lee; Blackfly Solutions - Alan Dixon; Chris Burgess; Christian Wach; Circle Interactive - Dave Jenkins, Martin Castle; civicrm-builder; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Nicolas Ganivet, Sunil Pawar, Yashodha Chaku; CompuCorp - Michael Devery, Omar Abu Hussein; Coop SymbioTIC - Mathieu Lutfy, Samuel Vanhove; Dave Greenberg; Eli Lisseck; ericfg; Francesc Bassas i Bullich; Freeform Solutions - Herb van den Dool; Fuzion - Jitendra Purohit; gboudrias; Ginkgo Street Labs - Frank Gómez; JMA Consulting - Joe Murray, Monish Deb, Pradeep Nayak; John Kingsnorth; Joinery - Allen Shaw; Joseph Lacey; jules54; Kacper Warda; Korlon - Stuart Gaston; Left Join Labs - Sean Madsen; Lighthouse Design and Consulting - Brian Shaughnessy; Marc Brazeau; MC3 - Graham Mitchell; Megaphone Technology Consulting - Jon Goldberg; MJW Consulting - Matthew Wire; mmauroy; mohamedziada; Openflows - Eric Goldhagen; otetard; Pawel Nowak; Progressive Technology Project - Jamie McClelland; Semper IT - Karin Gerritsen; Skvare - Mark Hanna; Tadpole Collective - Kevin Cristiano; Third Sector Design - Michael McAndrew; Web Access - Kurund Jalmi; Wikimedia Foundation - Eileen McNaughton; ximapmi
+Adam Zilkie; Artful Robot - Rich Lott; Christian Wach; Circle Interactive -
+Martin Castle; CiviDesk - Nicolas Ganivet; Coop SymbioTIC - Guillaume Boudrias,
+Samuel Vanhove; Custom Websites to Go - Julie Hall; CYIM - Matthias de Mauroy;
+Dave Greenberg; Freeform Solutions - Herb van den Dool; JMA Consulting - Joe
+Murray; John Kingsnorth; Joinery - Allen Shaw; Joseph Lacey; Korlon - Stuart
+Gaston; Marc Brazeau; MC3 - Graham Mitchell; Megaphone Technology Consulting -
+Jon Goldberg; Mohamed Ziada; Olivier Tétard; Openflows - Eric Goldhagen; Semper
+IT - Karin Gerritsen; Web Access - Kurund Jalmi; XIMA - Philipp Michael
 
 ## <a name="feedback"></a>Feedback
 
-These release notes are edited by Alice Frumin and Andrew Hunt.  If you'd like
-to provide feedback on them, please login to https://chat.civicrm.org/civicrm
-and contact `@agh1`.
+These release notes are edited by Andrew Hunt.  If you'd like to provide
+feedback on them, please login to https://chat.civicrm.org/civicrm and contact
+`@agh1`.
