--- a/release-notes/4.7.27.md
+++ b/release-notes/4.7.27.md
@@ -295,6 +295,14 @@ Released November 1, 2017
   Custom fields with values would be overwritten by imported values even when
   the import is using the Fill mode for matched contacts.
 
+- **[CRM-21330](https://issues.civicrm.org/jira/browse/CRM-21330) Create
+  Activity gives fatal error on dmaster
+  ([11157](https://github.com/civicrm/civicrm-core/pull/11157))**
+
+- **[CRM-21267](https://issues.civicrm.org/jira/browse/CRM-21267) Error 500 -
+  Call to undefined method CRM_Contact_Import_Parser::formatCustomDate
+  ([11143](https://github.com/civicrm/civicrm-core/pull/11143))**
+
 ### CiviGrant
 
 - **[CRM-20460](https://issues.civicrm.org/jira/browse/CRM-20460) Grant Report
@@ -420,6 +428,10 @@ Released November 1, 2017
   Membership status set to pending if contribution status label 'Completed' is
   renamed ([10670](https://github.com/civicrm/civicrm-core/pull/10670))**
 
+- **[CRM-21314](https://issues.civicrm.org/jira/browse/CRM-21314) Credit card
+  block missing from membership payment form
+  ([11140](https://github.com/civicrm/civicrm-core/pull/11140))**
+
 ### CiviEvent
 
 - **[CRM-21196](https://issues.civicrm.org/jira/browse/CRM-21196) Event reports
@@ -452,7 +464,8 @@ Released November 1, 2017
 
 - **[CRM-20892](https://issues.civicrm.org/jira/browse/CRM-20892) Same mailing
   open in two windows can overwrite data on scheduled mailings
-  ([10953](https://github.com/civicrm/civicrm-core/pull/10953))**
+  ([11211](https://github.com/civicrm/civicrm-core/pull/11211) and
+  [10953](https://github.com/civicrm/civicrm-core/pull/10953))**
 
   A new `modified_date` prevents a CiviMail window from saving mailing data if
   the mailing has been saved (in another tab or by another user) since the
@@ -472,6 +485,15 @@ Released November 1, 2017
 
   The CiviEngage module ships with template overrides, and outdated templates
   broke the birth date field.
+
+### Joomla Integration
+
+- **[CRM-21300](https://issues.civicrm.org/jira/browse/CRM-21300) Joomla: Trying
+  to get property of non-object in CRM/Core/Permission/Joomla.php
+  ([11135](https://github.com/civicrm/civicrm-core/pull/11135))**
+
+  This resolves an error that would appear due to the database object bing
+  `null` in some cases.
 
 ### WordPress Integration
 
@@ -548,33 +570,43 @@ Released November 1, 2017
 - **NFC Civilint civicrm_contact_ref module
   ([481](https://github.com/civicrm/civicrm-drupal/pull/481))**
 
+- **[CRM-21315](https://issues.civicrm.org/jira/browse/CRM-21315) (intra-rc
+  regression) pay_later processor showing up in list of available processors
+  ([11141](https://github.com/civicrm/civicrm-core/pull/11141))**
+
+- **[CRM-21285](https://issues.civicrm.org/jira/browse/CRM-21285) Buildkit
+  Installs failing for WordPress
+  ([11112](https://github.com/civicrm/civicrm-core/pull/11112) and
+  [11105](https://github.com/civicrm/civicrm-core/pull/11105))**
+
 ## <a name="credits"></a>Credits
 
 This release was developed by the following code authors:
 
-AGH Strategies - Alice Frumin, Andrew Hunt; Australian Greens - Seamus Lee;
-Blackfly Solutions - Alan Dixon; Chris Burgess; Circle Interactive - Dave
-Jenkins; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Sunil Pawar, Yashodha
-Chaku; CompuCorp - Camilo Rodriguez, Kacper Warda, Michael Devery, Omar Abu
-Hussein; Coop SymbioTIC - Mathieu Lutfy; Eli Lisseck; Francesc Bassas i Bullich;
-Fuzion - Jitendra Purohit; Ginkgo Street Labs - Frank Gómez; JMA Consulting -
-Monish Deb, Pradeep Nayak; Left Join Labs - Sean Madsen; Lighthouse Design and
-Consulting - Brian Shaughnessy; MJW Consulting - Matthew Wire; Pawel Nowak;
-Progressive Technology Project - Jamie McClelland; Skvare - Mark Hanna; Tadpole
-Collective - Kevin Cristiano; Third Sector Design - Michael McAndrew; Wikimedia
-Foundation - Eileen McNaughton
+AGH Strategies - Alice Frumin, Andrew Hunt; Agileware - Alok Patel; Australian
+Greens - Seamus Lee; Blackfly Solutions - Alan Dixon; Chris Burgess; Circle
+Interactive - Dave Jenkins; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Sunil
+Pawar, Yashodha Chaku; CompuCorp - Camilo Rodriguez, Kacper Warda, Michael
+Devery, Omar Abu Hussein; Coop SymbioTIC - Mathieu Lutfy; Eli Lisseck; Francesc
+Bassas i Bullich; Fuzion - Jitendra Purohit; Ginkgo Street Labs - Frank Gómez;
+JMA Consulting - Monish Deb, Pradeep Nayak; Left Join Labs - Sean Madsen;
+Lighthouse Design and Consulting - Brian Shaughnessy; MJW Consulting - Matthew
+Wire; Pawel Nowak; Progressive Technology Project - Jamie McClelland; Skvare -
+Mark Hanna; Tadpole Collective - Kevin Cristiano; Third Sector Design - Michael
+McAndrew; Wikimedia Foundation - Eileen McNaughton
 
 Most authors also reviewed code for this release; in addition, the following
 reviewers contributed their comments:
 
-Adam Zilkie; Artful Robot - Rich Lott; Christian Wach; Circle Interactive -
-Martin Castle; CiviDesk - Nicolas Ganivet; Coop SymbioTIC - Guillaume Boudrias,
-Samuel Vanhove; Custom Websites to Go - Julie Hall; CYIM - Matthias de Mauroy;
-Dave Greenberg; Freeform Solutions - Herb van den Dool; JMA Consulting - Joe
-Murray; John Kingsnorth; Joinery - Allen Shaw; Joseph Lacey; Korlon - Stuart
-Gaston; Marc Brazeau; MC3 - Graham Mitchell; Megaphone Technology Consulting -
-Jon Goldberg; Mohamed Ziada; Olivier Tétard; Openflows - Eric Goldhagen; Semper
-IT - Karin Gerritsen; Web Access - Kurund Jalmi; XIMA - Philipp Michael
+Adam Zilkie; Agileware - Agileware Team; Artful Robot - Rich Lott; Christian
+Wach; Circle Interactive - Martin Castle; CiviDesk - Nicolas Ganivet; Coop
+SymbioTIC - Guillaume Boudrias, Samuel Vanhove; Custom Websites to Go - Julie
+Hall; CYIM - Matthias de Mauroy; Dave Greenberg; Freeform Solutions - Herb van
+den Dool; JMA Consulting - Joe Murray; John Kingsnorth; Joinery - Allen Shaw;
+Joseph Lacey; Korlon - Stuart Gaston; Marc Brazeau; MC3 - Graham Mitchell;
+Megaphone Technology Consulting - Jon Goldberg; Mohamed Ziada; Olivier Tétard;
+Openflows - Eric Goldhagen; Semper IT - Karin Gerritsen; Web Access - Kurund
+Jalmi; XIMA - Philipp Michael
 
 ## <a name="feedback"></a>Feedback
 
