--- a/release-notes/4.7.28.md
+++ b/release-notes/4.7.28.md
@@ -22,27 +22,39 @@ Released December 6, 2017
 
 ## <a name="features"></a>Features
 
-### Extension System
-
-- **[CRM-16243](https://issues.civicrm.org/jira/browse/CRM-16243) Dependency management for extensions ([11173](https://github.com/civicrm/civicrm-core/pull/11173) and [11101](https://github.com/civicrm/civicrm-core/pull/11101))**
-
 ### Core CiviCRM
 
-- **[CRM-21322](https://issues.civicrm.org/jira/browse/CRM-21322) create hook to modify entityRef fields ([11192](https://github.com/civicrm/civicrm-core/pull/11192))**
+- **[CRM-16243](https://issues.civicrm.org/jira/browse/CRM-16243) Dependency
+  management for extensions
+  ([11173](https://github.com/civicrm/civicrm-core/pull/11173) and
+  [11101](https://github.com/civicrm/civicrm-core/pull/11101))**
 
-- **[CRM-21195](https://issues.civicrm.org/jira/browse/CRM-21195) Adding the ability to add icons to menu items ([11054](https://github.com/civicrm/civicrm-core/pull/11054))**
+  Extensions can now specify other extensions they depend on.  When enabling an
+  extension, the requisite extensions will be automatically enabled first.
+  However, for now at least, this does not automatically download those
+  extensions.
 
-- **[CRM-21374](https://issues.civicrm.org/jira/browse/CRM-21374) D8 footer resources get added to the header ([11218](https://github.com/civicrm/civicrm-core/pull/11218))**
+- **[CRM-20769](https://issues.civicrm.org/jira/browse/CRM-20769) Allow for
+  Button Text on profiles to be overriden in settings
+  ([10557](https://github.com/civicrm/civicrm-core/pull/10557))**
 
-- **[CRM-21062](https://issues.civicrm.org/jira/browse/CRM-21062) Remove Tax Rate trailing zeros for display in Confirm / Thankyou forms ([10856](https://github.com/civicrm/civicrm-core/pull/10856))**
+  You can now enter custom labels for the Save and Cancel buttons on profiles in
+  Create or Edit modes.
 
-- **[CRM-20769](https://issues.civicrm.org/jira/browse/CRM-20769) Allow for Button Text on profiles to be overriden in settings ([10557](https://github.com/civicrm/civicrm-core/pull/10557))**
+- **[CRM-21322](https://issues.civicrm.org/jira/browse/CRM-21322) create hook to
+  modify entityRef fields
+  ([11192](https://github.com/civicrm/civicrm-core/pull/11192))**
 
-- **[CRM-21297](https://issues.civicrm.org/jira/browse/CRM-21297) Automatically fill database details in installer for Drupal ([11113](https://github.com/civicrm/civicrm-core/pull/11113))**
+  A [new
+  hook](https://docs.civicrm.org/dev/en/latest/hooks/hook_civicrm_alterEntityRefParams/)
+  allows extension developers to modify the parameters for entity reference
+  fields that appear in a form.
 
-- **[CRM-21231](https://issues.civicrm.org/jira/browse/CRM-21231) On CiviMail screen make 'Review and Schedule' tab active if required fields are filled ([11035](https://github.com/civicrm/civicrm-core/pull/11035))**
+- **[CRM-21195](https://issues.civicrm.org/jira/browse/CRM-21195) Adding the
+  ability to add icons to menu items
+  ([11054](https://github.com/civicrm/civicrm-core/pull/11054)) (follow-up work)**
 
-- **[CRM-20710](https://issues.civicrm.org/jira/browse/CRM-20710) Add function to return all valid types ([10486](https://github.com/civicrm/civicrm-core/pull/10486))**
+  This offers a slight adjustment to the markup for menu item icons.
 
 - **[CRM-21262](https://issues.civicrm.org/jira/browse/CRM-21262) Add a check for incorrect Resource URL ([11067](https://github.com/civicrm/civicrm-core/pull/11067))**
 
@@ -76,7 +88,15 @@ Released December 6, 2017
 
 - **[CRM-21346](https://issues.civicrm.org/jira/browse/CRM-21346) Make pledge installment count & amount exportable ([11194](https://github.com/civicrm/civicrm-core/pull/11194))**
 
-### CiviMail, NYSS
+### CiviMail
+
+- **[CRM-21231](https://issues.civicrm.org/jira/browse/CRM-21231) On CiviMail
+  screen make 'Review and Schedule' tab active if required fields are filled
+  ([11035](https://github.com/civicrm/civicrm-core/pull/11035))**
+
+  When composing a message in CiviMail, the second tab, "Review and Schedule",
+  is disabled at first.  Now, the tab link becomes active when the first tab is
+  complete.
 
 - **[CRM-21335](https://issues.civicrm.org/jira/browse/CRM-21335) CiviMail recipient field isn't marked as required ([11185](https://github.com/civicrm/civicrm-core/pull/11185))**
 
@@ -113,6 +133,14 @@ Released December 6, 2017
 - **[CRM-21268](https://issues.civicrm.org/jira/browse/CRM-21268) Missing French overseas departments. ([11076](https://github.com/civicrm/civicrm-core/pull/11076))**
 
 ### Drupal Integration Modules
+
+- **[CRM-21297](https://issues.civicrm.org/jira/browse/CRM-21297) Automatically
+  fill database details in installer for Drupal
+  ([11113](https://github.com/civicrm/civicrm-core/pull/11113))**
+
+  The database connection fields when installing CiviCRM on Drupal now default
+  to the CMS database connection details.  This matches the process on
+  WordPress.
 
 - **[CRM-21371](https://issues.civicrm.org/jira/browse/CRM-21371) An api error when calling drush cvapi should be treated as a drush error ([503](https://github.com/civicrm/civicrm-drupal/pull/503))**
 
@@ -240,6 +268,13 @@ Released December 6, 2017
 
 ### CiviContribute
 
+- **[CRM-21062](https://issues.civicrm.org/jira/browse/CRM-21062) Remove Tax
+  Rate trailing zeros for display in Confirm / Thankyou forms
+  ([10856](https://github.com/civicrm/civicrm-core/pull/10856))**
+
+  This resolves a bug where tax rates would always display 8 decimal places on
+  contribution page confirmation and thank-you pages.
+
 - **[CRM-20772](https://issues.civicrm.org/jira/browse/CRM-20772) Price set calculation precision when sales tax enabled ([11016](https://github.com/civicrm/civicrm-core/pull/11016))**
 
 - **[CRM-20572](https://issues.civicrm.org/jira/browse/CRM-20572) Remove jcalendar from Contrib Sybunt custom Search ([10355](https://github.com/civicrm/civicrm-core/pull/10355))**
@@ -249,6 +284,13 @@ Released December 6, 2017
 - **[CRM-21327](https://issues.civicrm.org/jira/browse/CRM-21327) Not able to change Payment Processor in event fees ([11153](https://github.com/civicrm/civicrm-core/pull/11153))**
 
 ### Drupal Integration Modules
+
+- **[CRM-21374](https://issues.civicrm.org/jira/browse/CRM-21374) D8 footer
+  resources get added to the header
+  ([11218](https://github.com/civicrm/civicrm-core/pull/11218))**
+
+  Items added to the `page-footer` region would appear in the header in Drupal 8
+  sites.
 
 - **[CRM-21272](https://issues.civicrm.org/jira/browse/CRM-21272) CMSUser has Drupal 6/7 code that breaks when using with Drupal 8 ([11145](https://github.com/civicrm/civicrm-core/pull/11145), [11139](https://github.com/civicrm/civicrm-core/pull/11139), and [11079](https://github.com/civicrm/civicrm-core/pull/11079))**
 
@@ -289,6 +331,10 @@ Released December 6, 2017
 - **[CRM-21258](https://issues.civicrm.org/jira/browse/CRM-21258) Display name fatal error if names are too long ([11063](https://github.com/civicrm/civicrm-core/pull/11063))**
 
 ## <a name="misc"></a>Miscellany
+
+- **[CRM-20710](https://issues.civicrm.org/jira/browse/CRM-20710) Add function
+  to return all valid types
+  ([10486](https://github.com/civicrm/civicrm-core/pull/10486))**
 
 ## <a name="credits"></a>Credits
 
